[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Editor/Keyframe.gd" type="Script" id=1]

[node name="Keyframe" type="Button"]
margin_right = 12.0
margin_bottom = 24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_Keyframe_button_down"]
[connection signal="button_up" from="." to="." method="_on_Keyframe_button_up"]
[connection signal="pressed" from="." to="." method="_on_Keyframe_pressed"]
